
  Code Quality:
    * Replace Boost with C++ standard library where possible
    * Comprehensive clang-tidy integration (CI enforced)
    * CodeQL security scanning
    * Coverity Scan integration
    * ASan/UBSan/TSan/Valgrind CI checks
    * >95% code coverage target with comprehensive test suite
    * Benchmark CI for performance regression detection (>20% threshold)

  Bug Fixes:
    * Fix exception safety in value parser (Coverity CID 641344)
    * Fix socket FD leak in firewall rejection path (Coverity CID 641369)
    * Fix undefined behavior in Base64 encoding for signed char platforms
    * Fix EINTR handling in reactor poll/select implementations
    * Various thread safety improvements with atomics
    * Fix Pool_executor destructor to suppress exceptions (Coverity CID 641352)
    * Fix Pool_thread wait loop race condition with predicate-based wait (Coverity CID 641406)
    * Fix unnecessary string copy in HTTP auth parsing (Coverity CID 641411)
    * Fix unchecked return values in socket operations (Coverity CID 641402, 641404)

0.13.7 - 0.13.8
  * Support for <i8>, a 64-bit integer XML-RPC extension

0.13.6 - 0.13.7
  * Fix conditional jump or move depends on uninitialised value
  * Build: Fix clang-tidy warning about redundant casts
  * Build: Fix cppcheck warning in methods.cc
  * Build: Fix deprecation warning

0.13.5 - 0.13.6
  * Add support for tracing via HTTP X- headers (thanks to Dmitry Salomatin)
  * Security: Disable SSLv3 (issue #4)

0.13.4 - 0.13.5
  * Stability: Fix crash on parsing requests/responses with empty root <value>
    parameter (Thanks to Evgeny Dontsov).
  * Minor build and installation fixes (Thanks to Joseph VanAndel).

0.13.3 - 0.13.4
Fix compilation on Windows when OpenSSL 1.0.2 is used.

0.13.2 - 0.13.3
Remove reduntant socket close in client connection.

0.13.1 - 0.13.2
Compilatibility: Ignore XML namespaces in request's tag names.

0.13 - 0.13.1